# erigon-db

./: .gitignore  Cargo.toml  README.md  build.rs  mdbx.md
contracts/: Store.sol
doc/: mdbx.md
src/: erigon.rs  lib.rs  txgen.rs
src/erigon/: macros.rs  mod.rs  models.rs  reader.rs  tables.rs  utils.rs
src/erigon/models/: account.rs  block.rs  log.rs  mod.rs  transaction.rs
src/erigon/utils/: consts.rs  mod.rs
src/kv/: mod.rs  tables.rs  traits.rs
test/contracts/: Store.sol
