[package]
name = "erigon-db"
version = "0.1.0"
authors = ["gio256 <gio256@protonmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "erigon_db"
path = "src/lib.rs"
[[bin]]
name = "txgen"
path = "src/txgen.rs"

[dependencies]
arrayvec = "0.7"
arrayref = "0.3"
bytes = "1"
croaring = { git = "https://github.com/saulius/croaring-rs" }
roaring = "0.9"
derive_more = "0.99"
eyre = "0.6.5"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethereum-types = { version = "0.13", features = ["codec"] }
hex-literal = "0.3"
mdbx = { package = "libmdbx", version = "0.1" }
parity-scale-codec = { version = "3", features = ["bytes"] }
fastrlp = { version = "0.1", features = [
    "derive",
    "ethereum-types",
    "ethnum",
    "std",
] }
serde = "1"
serde_json = "1"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
libmdbx = { git = "https://github.com/gio256/libmdbx-rs", branch = "develop" }
fastrlp = { git = "https://github.com/gio256/fastrlp", branch = "develop" }
