[package]
name = "erigon-db"
version = "0.1.0"
authors = ["gio256 <gio256@protonmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "erigon_db"
path = "src/lib.rs"
[[bin]]
name = "txgen"
path = "src/txgen.rs"
required-features = ["txgen"]

[dependencies]
arrayvec = "0.7"
arrayref = "0.3"
bytes = { version = "1", features = ["serde"] }
roaring = "0.9"
derive_more = "0.99"
eyre = "0.6.5"
ethereum-types = { version = "0.13", features = ["codec"] }
hex-literal = "0.3"
mdbx = { package = "libmdbx", version = "0.1" }
fastrlp = { version = "0.1", features = [
    "derive",
    "ethereum-types",
    "std",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tiny-keccak = "2.0"
seq-macro = "0.3"

tokio = { version = "1.5", features = ["macros", "rt-multi-thread"], optional = true }
ethers = { git = "https://github.com/gakonst/ethers-rs", optional = true }
hex = { version = "0.4.3", default-features = false, features = ["std"], optional = true }
paste = { version = "1.0.6", optional = true }
serde_cbor = "0.11.2"

[dev-dependencies]
tempfile = "3"
once_cell = "1"
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
eyre = "0.6.6"
semver = "1.0.4"
serde_json = "1.0.64"
Inflector = "0.11"
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[features]
txgen = ["tokio", "ethers", "hex", "paste"]
ethers-types = ["ethers"]

[patch.crates-io]
libmdbx = { git = "https://github.com/gio256/libmdbx-rs", branch = "develop" }
fastrlp = { git = "https://github.com/gio256/fastrlp", branch = "develop" }
